# openframe-oss-tenant

./: .gitignore  .goreleaser.yml  CLAUDE.md  CONTRIBUTING.md  README-test.md  README-text.md  README.md  pom.xml
.cursor/rules/: authentication-patterns.mdc  project-structure.mdc  ui-components.mdc
.cursor/rules/features/: authentik.mdc  fleet-mdm.mdc  meshcentral.mdc  tactical-rmm.mdc
.github/workflows/: build.yml  changes.yml  matrix.yml  promote.yml  test.yml
cli/: RELEASE_NOTES.md  go.mod  helm-values-example.yaml  helm-values.yaml  main.go
cli/cmd/: root.go  root_test.go
cli/cmd/bootstrap/: bootstrap.go  bootstrap_test.go
cli/cmd/chart/: chart.go  chart_test.go  (+2 more)
client/scripts/: setup_dev_init_config.sh
client/src/: installation_initial_config_service.rs  lib.rs  main.rs  service.rs
clients/openframe-chat/: Makefile  package-lock.json
clients/openframe-client/: Cargo.toml  Makefile
clients/openframe-client/.cargo/: config.toml
clients/openframe-client/config/: agent.toml
clients/openframe-client/docs/: PERMISSIONS.md
clients/openframe-client/infrastructure/meshcentral/: mac.sh  win.ps1
clients/openframe-client/infrastructure/tactical-rmm/: mac_arm64.sh  win_amd64.ps1
clients/openframe-client/scripts/: README.md
clients/openframe-client/src/: config.rs  installation_initial_config_service.rs  lib.rs  main.rs  metrics.rs  service.rs  service_adapter.rs  system.rs  updater.rs
clients/openframe-client/src/clients/: auth_client.rs  mod.rs  registration_client.rs  tool_agent_file_client.rs  tool_api_client.rs
clients/openframe-client/src/listener/: mod.rs  openframe_client_update_listener.rs  tool_agent_update_listener.rs  tool_installation_message_listener.rs
clients/openframe-client/src/logging/: metrics.rs  mod.rs  platform.rs  shipping.rs
clients/openframe-client/src/models/: agent_configuration.rs  agent_registration_response.rs  agent_token_response.rs  download_configuration.rs  installed_agent_message.rs  installed_tool.rs  mod.rs  openframe_client_info.rs  openframe_client_update_message.rs  tool_agent_update_message.rs  tool_connection.rs  tool_connection_message.rs  tool_installation_message.rs  tool_installation_result.rs
clients/openframe-client/src/monitoring/: permissions.rs
clients/openframe-client/src/platform/: directories.rs  mod.rs  permissions.rs
clients/openframe-client/src/services/: agent_auth_service.rs  agent_configuration_service.rs  device_data_fetcher.rs  encryption_service.rs  github_download_service.rs  initial_authentication_processor.rs  installed_agent_message_publisher.rs  installed_tools_service.rs  mod.rs  nats_connection_manager.rs  nats_message_publisher.rs  openframe_client_info_service.rs  openframe_client_update_service.rs  registration_processor.rs  shared_token_service.rs  tool_agent_update_service.rs  tool_command_params_resolver.rs  tool_connection_message_publisher.rs  tool_connection_processing_manager.rs  tool_connection_service.rs  tool_installation_service.rs  tool_kill_service.rs  tool_run_manager.rs  tool_uninstall_service.rs  tool_url_params_resolver.rs
clients/openframe-client/src/utils/: version_comparator.rs
docs/: README.md
docs/getting-started/: first-steps.md
docs/reference/: README.md
manifests/: argocd-values.yaml
manifests/app-of-apps/: values.yaml
manifests/apps/: values-dev.yaml  values-prod.yaml  values-qa.yaml  values-stage.yaml  values.yaml
scripts/: example-helm-values.yaml
(+450 files in other folders)
