[package]
name = "openframe-client"
version = "0.1.0"
edition = "2021"
authors = ["Flamingo Team"]
description = "OpenFrame - System management and monitoring"
license = "MIT"
repository = "https://github.com/flamingo-stack/openframe-oss-tenant"
documentation = "https://docs.openframe.org"
readme = "README.md"
keywords = ["system-management", "monitoring", "agent", "automation"]
categories = ["system", "monitoring"]

[[bin]]
name = "openframe-client"
path = "src/main.rs"

[lib]
name = "openframe"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["attributes", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
directories = "5.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
config = { version = "0.14", features = ["toml"] }
toml = "0.8"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
zip = "0.6"
tempfile = "3.10"
semver = "1.0"
sys-info = "0.9"
velopack = "0.0.1213-g57cf68d"
aes-gcm = "0.10"
base64 = "0.21"
log = "0.4.27"
clap = { version = "4.5", features = ["derive", "env", "std", "cargo", "string"] }
whoami = "1.4"
tracing-appender = "0.2"
flate2 = "1.0"
service-manager = "0.8"
plist = "1.7.1"
# System information collection dependencies
hostname = "0.3"
bytes = "1.10.1"
async-nats = { git = "https://github.com/flamingo-stack/nats.rs.git", branch = "feature/openframe-auth-callback", features = ["websockets"] }
rustls-pemfile = "1.0"
regex = "1.11.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser", "shellapi", "securitybaseapi", "errhandlingapi", "winerror"] }
is_elevated = "0.1"
windows-service = "0.6"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_RemoteDesktop", "Win32_System_JobObjects", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
embed-resource = "2.4"

[package.metadata.bundle]
name = "OpenFrame"
identifier = "com.openframe.client"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/256x256.png"]
version = "0.1.0"
copyright = "Copyright (c) 2024 Flamingo Team"
category = "System"
short_description = "OpenFrame system management and monitoring"
long_description = """
OpenFrame is a powerful system management and monitoring solution that provides:
- System metrics collection and reporting
- Automated updates and maintenance
- Remote management capabilities
- Integration with various management platforms
"""

[package.metadata.velopack]
version = "0.1.0"
product-name = "OpenFrame"
executable = "openframe-client"
authors = ["Flamingo Team"]
first-run = true
license = "MIT"
support-url = "https://github.com/flamingo-stack/openframe-oss-tenant"
icon = "icons/icon.ico"
splash-image = "icons/splash.png"
release-notes = "Initial release of OpenFrame"
setup-icon = "icons/setup.ico"
company-name = "Flamingo"
copyright = "Copyright © 2024 Flamingo Team"
suggest-reboot = false
compression-level = "normal"
delta = true 
